<?xml version="1.0"?>
<package format="2">
  <name>autonomy_training</name>
  <version>0.0.0</version>
  <description>The autonomy_training package</description>

  <maintainer email="hmarthens@gmail.com">hmarthens</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_export_depend>rosbridge_server</build_export_depend>
  <exec_depend>rosbridge_server</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
